# ufostroker-py

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yaml
dockerfiles/: Dockerfile
src/: lib.rs
tests/: test_stroke.py
tests/data/Scurve.ufo/: fontinfo.plist  lib.plist
tests/data/Scurve.ufo/glyphs/: A_.glif  B_.glif  C_.glif
ufostroker/: __init__.py
