[package]
name = "ufostroker"
version = "0.2.2"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
edition = "2018"

[dependencies]
glifparser = { git = "https://github.com/MFEK/glifparser.rlib", branch="master" }
MFEKmath = { git = "https://github.com/MFEK/math.rlib" }


[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
]

    [dependencies.pyo3]
    version = "0.12.2"
    features = ["extension-module"]
