name = "ufostroker"
version = "0.3.0"
description = "Path stroking for UFO glyphs"
readme = "README.md"

classifier = [
  "Programming Language :: Rust",
  "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
]


[project]
dependencies = ["ufo2ft", "beziers>=0.4.0"]
dev-dependencies = ["ufoLib2~=0.11.0", "defcon==0.8.1"]
name = "ufostroker"

[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"
